added profile route and views

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/postrefers.js"></script>
         <script src="scripts/controllers/postJob.js"></script>
+        <script src="scripts/controllers/profile.js"></script>
         <!-- endbuild -->
 </body>
 </html>
