--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,10 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/bootstrap.css">
+        <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.css">
         <!-- endbuild -->
+        <!-- Drag Drop Tutorial -->
+        
 </head>
   <body ng-app="refermeApp">
     <!--[if lt IE 7]>
@@ -41,6 +44,7 @@
     </script>
 
     <script src="bower_components/jquery/jquery.js"></script>
+     <script src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
     <script src="bower_components/angular/angular.js"></script>
 
    <!--  BootStrap  -->
@@ -65,6 +69,7 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/angular-dragdrop/src/angular-dragdrop.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -73,6 +78,8 @@
         <script src="scripts/controllers/postrefers.js"></script>
         <script src="scripts/controllers/postJob.js"></script>
         <script src="scripts/controllers/profile.js"></script>
+        <script src="scripts/directives/draggable.js"></script>
+        <script src="scripts/directives/droppable.js"></script>
         <!-- endbuild -->
 </body>
 </html>
