adds lots of things

--- a/profile.html
+++ b/profile.html
@@ -14,11 +14,66 @@
 
 <body>
 	<header>
-		
+		<div class="container">
+			<a href="#" title="home"><img class="logo" src="images/logo.png" alt="" height="35"></a>
+			<a href="./login.html" title="menu/logout"><img class="menu-button" src="images/menu-button.png" alt=""></a>
+			<img class="profile-pic" height="30" src="images/avatar.jpg" alt="">
+		</div>
 	</header>
 
+	<div class="clear"></div>
+
 	<section>
-	
+		<div class="container">
+			<div class="left">
+				<img class="profile-pic" src="images/avatar.jpg" alt="" height="150">
+
+				<div class="bio">
+					<div class="name">First Name</div>
+					<div class="position">Current Position</div>
+					<div class="location">City, State</div>
+					<div class="link"><a href="#">LinkedIn URL</a></div>
+				</div>
+
+				<div class="candidates">
+					<h1>Candidates</h1>
+				</div>
+					
+				<ul class="social">
+					<li><a href="#" alt="" class="button blue left">linkedin</a></li>
+					<li><a href="#" alt="" class="button blue left">twitter</a></li>
+					<li><a href="#" alt="" class="button blue left">facebook</a></li>
+				</ul>
+
+				<div>
+					<input class="search" placeholder="search for candidates">
+				</div>
+
+				<div class="api">
+					<div>[Social API data will go here...]</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container">
+			<div class="right">
+				<h1>Referrals</h1>
+				<div class="jobs">
+					<a href="#" alt="" class="button green left">my jobs</a>
+					<a href="#" alt="" class="button green right">shared with me</a>
+				</div>
+
+				<div>
+					<input class="search" placeholder="search for candidates">
+				</div>
+
+				<div class="dragDrop">
+					<div>[Drag and Drop feature will go here...]</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<footer>
